fix front : - 보드 삭제 버튼 추가 - 보드 이름 받아오기 기능 추가 - 토큰이 유효하지 않으면 로컬스토리지에서 토큰 삭제

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -228,6 +228,14 @@ button:hover {
   border-color: #007bff;
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
+.board-trash-button {
+  position: absolute;
+  /* top: 45px; */
+  right: 20px;
+  transform: translateY(5%);
+  font-size: 20px;
+  cursor: pointer;
+}
 .column {
   background-color: white;
   border-radius: 4px;
