--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -148,7 +148,8 @@ button:hover {
 #signup-container,
 #profile-container,
 #login-container,
-#invite-user-list-container {
+#invite-user-list-container,
+#board-member-list-container {
   background: #fff;
   padding: 20px;
   border-radius: 5px;
@@ -158,7 +159,8 @@ button:hover {
   position: relative; /* 추가: 모달 내부에서의 상대 위치 설정 */
 }
 
-#close-btn {
+#close-btn,
+#close-board-btn {
   position: absolute;
   top: 10px;
   right: 10px;
