--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -186,7 +186,7 @@ button:hover {
 }
 
 #main-container {
-  display: flex;
+  display: none;
   flex-direction: column;
   height: 100vh;
   transition: 0.5s;
@@ -386,6 +386,17 @@ button:hover {
 }
 .file-input-button:hover {
   opacity: 0.8;
+}
+
+/* 보드 초대할 사용자, 보드 멤버 ul */
+.board-ul {
+  padding: 0;
+}
+
+/* 보드 초대할 사용자, 보드 멤버 li */
+.board-li {
+  padding: 0;
+  list-style-type: none;
 }
 
 /* 검색 창 스타일 */
