--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -143,11 +143,9 @@ button:hover {
   align-items: center;
   justify-content: center;
 }
+.modal-box,
 #task-container,
 #submit-container,
-#signup-container,
-#profile-container,
-#login-container,
 #invite-user-list-container,
 #board-member-list-container {
   background: #fff;
